# VulkanWrappers

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
apps/: CMakeLists.txt  main.cpp
build2/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
build2/coreclasses-build/: Makefile  cmake_install.cmake
build2/coreclasses-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build2/coreclasses-download/coreclasses-prefix/tmp/: coreclasses-gitclone.cmake
build2/coreclasses-download/filesystem-prefix/tmp/: filesystem-gitclone.cmake
build2/coreclasses-download/glslang-prefix/tmp/: glslang-gitclone.cmake
build2/coreclasses-download/openexr-prefix/src/openexr-stamp/: openexr-gitinfo.txt
build2/coreclasses-download/openexr-prefix/tmp/: openexr-gitclone.cmake
build2/filesystem-build/: Makefile  cmake_install.cmake
build2/filesystem-download/: CMakeCache.txt  Makefile  cmake_install.cmake
build2/filesystem-download/coreclasses-prefix/tmp/: coreclasses-gitclone.cmake
build2/filesystem-download/filesystem-prefix/tmp/: filesystem-gitclone.cmake
build2/filesystem-download/glslang-prefix/tmp/: glslang-gitclone.cmake
build2/filesystem-download/openexr-prefix/tmp/: openexr-gitclone.cmake  openexr-gitupdate.cmake
build2/glslang-build/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build2/glslang-build/OGLCompilersDLL/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build2/glslang-build/SPIRV/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build2/glslang-build/StandAlone/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build2/glslang-build/glslang/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build2/glslang-build/glslang/OSDependent/Windows/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build2/glslang-build/gtests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build2/glslang-build/hlsl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build2/glslang-download/: CMakeCache.txt  Makefile  cmake_install.cmake
build2/glslang-download/coreclasses-prefix/src/coreclasses-stamp/: coreclasses-gitinfo.txt
build2/glslang-download/coreclasses-prefix/tmp/: coreclasses-gitclone.cmake
build2/glslang-download/filesystem-prefix/src/filesystem-stamp/: filesystem-gitinfo.txt
build2/glslang-download/filesystem-prefix/tmp/: filesystem-gitclone.cmake  filesystem-gitupdate.cmake
build2/glslang-download/glslang-prefix/tmp/: glslang-gitclone.cmake
build2/glslang-download/openexr-prefix/tmp/: openexr-gitclone.cmake
build2/openexr-build/: Makefile  cmake_install.cmake
build2/openexr-build/IlmBase/: Makefile  cmake_install.cmake
build2/openexr-build/IlmBase/Half/: Makefile  cmake_install.cmake
build2/openexr-build/IlmBase/Iex/: Makefile  cmake_install.cmake
build2/openexr-build/IlmBase/IexMath/: Makefile  cmake_install.cmake
build2/openexr-build/IlmBase/IlmThread/: Makefile  cmake_install.cmake
build2/openexr-build/IlmBase/Imath/: Makefile  cmake_install.cmake
build2/openexr-build/IlmBase/config/: IlmBaseConfig.h
build2/openexr-build/OpenEXR/: Makefile  cmake_install.cmake
build2/openexr-build/OpenEXR/IlmImf/: Makefile  cmake_install.cmake
build2/openexr-build/zlib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  zlib.pc
build2/openexr-download/: CMakeCache.txt  Makefile  cmake_install.cmake
build2/openexr-download/coreclasses-prefix/tmp/: coreclasses-gitclone.cmake  coreclasses-gitupdate.cmake
build2/openexr-download/filesystem-prefix/tmp/: filesystem-gitclone.cmake
build2/openexr-download/glslang-prefix/src/glslang-stamp/: glslang-gitinfo.txt
build2/openexr-download/glslang-prefix/tmp/: glslang-gitclone.cmake  glslang-gitupdate.cmake
build2/openexr-download/openexr-prefix/tmp/: openexr-gitclone.cmake
include/vk_wrappers/: command_buffer.hpp  command_buffer_state.hpp  compute_buffer.hpp  compute_texture.hpp  forward_declarations.hpp  image.hpp  image_view.hpp  instance.hpp  physical_device.hpp  queue.hpp  reflection.hpp  render_pass.hpp  sampler.hpp  shader_compiler.hpp  shader_module.hpp  shader_pipeline.hpp  shader_program.hpp  swap_chain.hpp
src/: CMakeLists.txt  command_buffer.cpp  command_buffer_state.cpp  compute_texture.cpp  descriptor_allocator.hpp  descriptor_set.cpp  error_handler.cpp  image_utils.cpp  instance.cpp  logical_device.cpp  physical_device.cpp  queue.cpp  render_pass.cpp  sampler.cpp  shader_compiler.cpp  shader_module.cpp  shader_pipeline.cpp  shader_pipeline.hpp  swap_chain.cpp
src/reflection/: reflection.cpp  spirv_reflect.c
tests/: compiler_unittest.cpp
vk_wrappers/: command_buffer.cpp  command_buffer.hpp  command_buffer_state.cpp  command_buffer_state.hpp  compute_buffer.cpp  compute_buffer.hpp  compute_pipeline.cpp  compute_pipeline.hpp  compute_texture.cpp  compute_texture.hpp  descriptor_allocator.cpp  descriptor_allocator.hpp  descriptor_set.cpp  descriptor_set.hpp  error_handler.cpp  error_handler.hpp  forward_declarations.hpp  frame_buffer.cpp  frame_buffer.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  instance.cpp  instance.hpp  logical_device.cpp  logical_device.hpp  physical_device.cpp  physical_device.hpp  pipeline.hpp  queue.cpp  queue.hpp  render_pass.cpp  render_pass.hpp  sampler.cpp  sampler.hpp  shader_module.cpp  shader_module.hpp  (+8 more)
vk_wrappers/utils/: image_utils.cpp  image_utils.hpp  render_pass_utils.cpp  render_pass_utils.hpp  shader_compiler.cpp  shader_compiler.hpp  transfer_utils.hpp
vk_wrappers/utils/reflection/: reflection.cpp  reflection.hpp
vk_wrappers/utils/unittests/: CMakeLists.txt  compiler_unittest.cpp
